--- a/stylus/components/growl.styl
+++ b/stylus/components/growl.styl
@@ -4,6 +4,7 @@
     padding: $buttonSpacingV $buttonSpacingH
     background-color: $green
     *
-      color: white
+      color: inherit
     .s-close
       float: right
+    color-backgrounds()
