--- a/jade/index.jade
+++ b/jade/index.jade
@@ -21,7 +21,7 @@ block header
             li
               a(href="index.html") Sandbox
             li
-              a(href="index2.html") Realistic
+              a(href="docs.html") Docs
       ul.s-right
         li
           a(href="#") Item
