--- a/stylus/components/box.styl
+++ b/stylus/components/box.styl
@@ -28,6 +28,7 @@
           display: inline-block
         > a:not(.s-btn)
           margin 0
+        > a:not(.s-btn), h1, h2, h3, h4, h5, p, strong, em
           padding: ($buttonSpacingV + ($space/5)) $buttonSpacingH
         > .s-btn, input
           margin: ($space/5) 0
@@ -80,3 +81,10 @@
       &[type="url"],
       &[type="week"]
         width: auto
+    &.s-box_vertical
+      > ul > li
+        display: block
+        > *:not(s-btn)
+          padding-bottom: 0
+        &:last-child
+          padding-bottom: $buttonSpacingV
