--- a/jade/docs.jade
+++ b/jade/docs.jade
@@ -24,6 +24,9 @@ block content
 
         hr
 
+        h2#boxes Boxes
+        p Boxes are the most versatile component of the Start library. These can function as navigation menus, toolboxes, or any generic container.
+
         h2#growls Growls
         p Growls are unobtrusive pop up messages called via JavaScript. A basic call might look like this:
         pre $.sGrowl({
