--- a/jade/docs.jade
+++ b/jade/docs.jade
@@ -48,6 +48,7 @@ block content
             tr
               td
                 code icon
+              td &mdash;
               td Icon to appear before the heading. Choose from the 
                 a(href="http://fontawesome.io/") Font Awesome 4 library
                 |  without the preceding "fa-"
@@ -99,6 +100,6 @@ block content
             li.s-box-heading
               p Directory
             li
-              a(href="#growls") Growls
+              a(href="#growls") Boxes
             li
-              a(href="#") Something else
+              a(href="#growls") Growls
