--- a/jade/docs.jade
+++ b/jade/docs.jade
@@ -18,7 +18,7 @@ block header
 block content
   .s-wrapper
     .s-row
-      .s-sm-8.s-col
+      .s-sm-8.s-lg-9.s-col
         h1 Start.css
         p These are the temporary docs for Start.css. Eventually there will be something much better-looking here.
 
@@ -94,7 +94,7 @@ block content
           | })
         p
           button.s-btn.s-blue(onclick="$.sGrowl({color: 'red', icon: 'book',title: 'Test',text: 'Testing...1, 2, 3', delay: 3000, container: '#example-container'})") Try it
-      .s-sm-4.s-col
+      .s-sm-4.s-lg-3.s-col
         .s-box.s-box_vertical
           ul
             li.s-box-heading
