--- a/css/docs.css
+++ b/css/docs.css
@@ -1,6 +1,5 @@
 .grid-example {
-	background-color: whitesmoke;
-	border: 1px solid #AAA;
 	padding: 5px;
 	font-family: monospace;
+	background-color: #EEEEEE
 }
