--- a/jade/index.jade
+++ b/jade/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block header
-  nav.s-box.s-fixed
+  nav.s-box.s-fixed.s-grey
     .s-wrapper
       ul
         li
@@ -31,11 +31,23 @@ block header
 
 block content
   .s-wrapper
+    .s-col.s-md-6
+      .s-box
+        img.s-box-caption_left(src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg")
+        .s-box-caption_right
+          h3 Title
+          p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    .s-col.s-md-6
+      .s-box
+        .s-box-caption_left
+          h3 Title
+          p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        img.s-box-caption_right(src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg")
     .s-col
       p To learn more, 
         a(href="#abc") Read this.
     .s-break
-    nav.s-box
+    nav.s-box.s-grey
       ul
         li
           
@@ -56,7 +68,7 @@ block content
       ul.s-right
         li
           a(href="#") Item
-    nav.s-box
+    nav.s-box.s-grey
       ul
         li
           a.s-btn#modal(href="#") Item
@@ -82,7 +94,7 @@ block content
               a(href="#") Dropdown Item
         li
           a.s-btn(href="#") Item
-    nav.s-box
+    nav.s-box.s-grey
       ul
         li
           a(href="#") Item
@@ -97,7 +109,7 @@ block content
           a.s-btn(href="#") Item
         li
           a(href="#") Item
-    nav.s-box
+    nav.s-box.s-grey
       ul
         li
           a.s-box-heading(href="#") Website
@@ -117,7 +129,7 @@ block content
           a(href="#") Item
     article.s-row
       .s-col.s-4
-        nav.s-box
+        nav.s-box.s-grey
           ul
             li
               a.s-box-heading(href="#") Website
@@ -136,7 +148,7 @@ block content
             li
               a(href="#") Item
       .s-col.s-4
-        nav.s-box
+        nav.s-box.s-grey
           ul
             li
               a.s-btn(href="#") Item
@@ -154,7 +166,7 @@ block content
             li
               a(href="#") Item
       .s-col.s-4
-        nav.s-box
+        nav.s-box.s-grey
           ul
             li
               a.s-btn(href="#") Item
@@ -172,7 +184,7 @@ block content
               a(href="#") Item
     article.s-row
       .s-col.s-4
-        nav.s-box
+        nav.s-box.s-grey
           ul
             li
               a.s-btn(href="#") Item
@@ -190,7 +202,7 @@ block content
             li
               a(href="#") Item
       .s-col.s-4
-        nav.s-box.s-clear
+        nav.s-box
           ul
             li
               a.s-btn(href="#") Item
@@ -205,7 +217,7 @@ block content
       .s-col.s-sm-6.s-md-4.s-lg-3 
         h5 Heading
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        nav.s-box
+        nav.s-box.s-dark
           ul
             li
               a(href="#") Toolbar 
