--- a/jade/layout.jade
+++ b/jade/layout.jade
@@ -10,6 +10,7 @@ html(lang="en")
     footer
   script(src="http://code.jquery.com/jquery-2.0.3.min.js")
   script(src="js/start.js")
+  script(src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js")
   script.
     $('p, span').s_endconcat()
     $('#modal').click(function() {
