--- a/stylus/base/typography.styl
+++ b/stylus/base/typography.styl
@@ -107,6 +107,7 @@ code, pre
   font-family: monospace
   word-break: break-all
   word-wrap: break-word
+  border: 0px !important
 code
   margin-bottom: 0px
   padding: 0 ($buttonSpacingH/3)
