--- a/css/start.css
+++ b/css/start.css
@@ -320,6 +320,7 @@ pre {
   font-family: monospace;
   word-break: break-all;
   word-wrap: break-word;
+  border: 0px !important;
 }
 code {
   margin-bottom: 0px;
